feat: Docker 컨테이너화 및 AWS 배포 준비
- Docker 설정
  * Dockerfile 추가 (Multi-stage build with Eclipse Temurin 21)
  * docker-compose.yml 추가 (MySQL + Backend)
  * .dockerignore 추가
  * application-docker.properties 추가

- AWS 배포 준비
  * application.properties 환경 변수화 (DB, Server, Storage)
  * application-prod.properties 추가 (프로덕션 설정)
  * Spring Boot Actuator 의존성 추가 (Health check)
  * AWS SDK for S3 의존성 추가

- 관리자 기능 확장
  * 배너 관리 시스템 구현 (Backend + Frontend)
  * 사용자 관리 페이지 추가
  * 판매자 관리 페이지 추가
  * 정산 관리 페이지 추가
  * 관리자 레이아웃 개선

- 배너 시스템
  * Banner 엔티티, Repository, Service, Controller 구현
  * 배너 캐러셀 컴포넌트 추가 (Embla Carousel)
  * 메인 페이지에 배너 표시

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>